# Kallune

./: .gitignore  CMakeLists.txt  README.md  Untitled Diagram.drawio
CmakeUtils/: .gitmodules  LICENSE  files_and_folders.cmake  visual_studio_helpers.cmake
CmakeUtils/.github/: FUNDING.yml
lib/glbasimac/: CMakeLists.txt
lib/glbasimac/glad/include/glad/: glad.h
lib/glbasimac/glad/src/: glad.c
lib/glbasimac/glbasimac/: glbi_convex_2D_shape.hpp  glbi_engine.hpp  glbi_set_of_points.hpp  glbi_texture.hpp
lib/glbasimac/glfw/: CMakeLists.txt
lib/glbasimac/glfw/.github/workflows/: build.yml
lib/glbasimac/glfw/src/: context.c  egl_context.c  glx_context.c  linux_joystick.c  wgl_context.c  win32_window.c  wl_init.c  wl_platform.h  wl_window.c
lib/glbasimac/src/: glbi_convex_2D_shape.cpp  glbi_engine.cpp  glbi_set_of_points.cpp  glbi_texture.cpp
lib/glbasimac/tools/: basic_mesh.hpp  camera.hpp  col3f.hpp  gl_tools.hpp  globals.hpp  indexed_mesh.hpp  matrix4d.hpp  matrix_stack.hpp  mesh.hpp  mesh_manager.hpp  shaders.hpp  stp3d.hpp  texture.hpp  vector3d.hpp  vector4d.hpp
src/: draw_scene.cpp  draw_scene.hpp  draw_scene_go.cpp  main.cpp
src/CellularAutomaton/: cellularAutomaton.cpp  cellularAutomaton.h
src/DiamondSquare/: diamondSquare.h
src/EntitiesGenerator/: entitiesGenerator.cpp  entitiesGenerator.h
src/Entity/: entity.cpp  entity.h
src/Entity/Entities/: boar.hpp  deer.hpp  wolf.hpp
src/Enums/: Map.cpp
src/Flowfield/: flowfield.cpp  flowfield.h
src/Game/: game.cpp  game.h
src/Map/: map.cpp  map.h
src/MapGeneration/: mapGeneration.cpp  mapGeneration.h
src/Player/: player.cpp
src/graphics/: animatedSprite.cpp  graphics.cpp  graphics.hpp  sprite.cpp  sprite.hpp
src/graphics/elements/: animatedSprite.cpp  map-display.cpp  map-display.hpp  sprite.cpp  sprite.hpp
src/graphics/scenes/: end_scene.cpp  end_scene.hpp  game_scene.cpp  game_scene.hpp  menu_scene.cpp  menu_scene.hpp
src/input/: input.cpp  input.hpp
src/input/scenes/: menu_state.cpp  menu_state.hpp  playing_state.cpp
src/interactions/: interactions.cpp  interactions.hpp
src/logic/: game.cpp  game.hpp
src/logic/DiamondSquare/: diamondSquare.cpp
src/logic/EntitiesGenerator/: entitiesGenerator.cpp  entitiesGenerator.hpp
src/logic/Entity/: entity.cpp  entity.hpp
src/logic/Entity/Entities/: boar.cpp  boar.hpp  deer.cpp  deer.hpp  wolf.cpp  wolf.hpp
src/logic/Flowfield/: flowfield.cpp
src/logic/Map/: map.cpp  map.hpp
src/logic/MapGeneration/: mapGeneration.cpp
src/logic/Player/: player.cpp  player.hpp
src/shaders/: sprite.fs  sprite.vs
src/utils/: behavior.hpp  directions.hpp  map.hpp  scene.hpp
